<resources>
    <string name="app_name">LunchTray</string>
    
    <string name="start_order">start order</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="order_summary">Order Summary</string>
    <string name="send_order">Send Order</string>

    <string name="title_start_order">Order</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_entree_menu">Entrees</string>
    <string name="title_side_menu">Sides</string>
    <string name="title_accompaniment_menu">Accompaniments</string>
    <string name="title_checkout">Checkout</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="tax">Tax: %s</string>
    <string name="total">Total: %s</string>
    <string name="submit_order">Order Submitted!</string>
</resources>