<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.rchyn.lunchtray.ui.order.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_entreeMenuFragment"
            app:destination="@id/entreeMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/entreeMenuFragment"
        android:name="com.rchyn.lunchtray.ui.order.EntreeMenuFragment"
        android:label="@string/title_entree_menu"
        tools:layout="@layout/fragment_entree_menu">
        <action
            android:id="@+id/action_entreeMenuFragment_to_sideMenuFragment"
            app:destination="@id/sideMenuFragment" />
        <action
            android:id="@+id/action_entreeMenuFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/sideMenuFragment"
        android:name="com.rchyn.lunchtray.ui.order.SideMenuFragment"
        android:label="@string/title_side_menu"
        tools:layout="@layout/fragment_side_menu">
        <action
            android:id="@+id/action_sideMenuFragment_to_accompanimentMenuFragment"
            app:destination="@id/accompanimentMenuFragment" />
        <action
            android:id="@+id/action_sideMenuFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/accompanimentMenuFragment"
        android:name="com.rchyn.lunchtray.ui.order.AccompanimentMenuFragment"
        android:label="@string/title_accompaniment_menu"
        tools:layout="@layout/fragment_accompaniment_menu">
        <action
            android:id="@+id/action_accompanimentMenuFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
        <action
            android:id="@+id/action_accompanimentMenuFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.rchyn.lunchtray.ui.order.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_checkoutFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>