<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainViewModel"
            type="com.rchyn.lunchtray.ui.order.viewmodel.OrderViewModel" />
        <variable
            name="checkoutFragment"
            type="com.rchyn.lunchtray.ui.order.CheckoutFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin"
            tools:context=".ui.order.CheckoutFragment">

            <TextView
                android:id="@+id/order_summary"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/order_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/entree_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@{mainViewModel.entree.name}"
                app:layout_constraintTop_toBottomOf="@id/order_summary"
                tools:text="Cauliflower" />

            <TextView
                android:id="@+id/entree_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{mainViewModel.entree.getFormattedPrice()}"
                app:layout_constraintTop_toTopOf="@id/entree_selection"
                tools:text="$7.00"/>

            <TextView
                android:id="@+id/side_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@{mainViewModel.side.name}"
                app:layout_constraintTop_toBottomOf="@id/entree_selection"
                tools:text="Spicy Potatoes" />

            <TextView
                android:id="@+id/side_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{mainViewModel.side.getFormattedPrice()}"
                app:layout_constraintTop_toTopOf="@id/side_selection"
                tools:text="$2.00"/>

            <TextView
                android:id="@+id/accompaniment_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/side_selection"
                android:text="@{mainViewModel.accompaniment.name}"
                tools:text="Mixed Berries" />

            <TextView
                android:id="@+id/accompaniment_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{mainViewModel.accompaniment.getFormattedPrice()}"
                app:layout_constraintTop_toTopOf="@id/accompaniment_selection"
                tools:text="$1.00"/>

            <View
                android:id="@+id/divider"
                style="@style/Widget.LunchTray.Divider"
                app:layout_constraintBottom_toTopOf="@id/subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accompaniment_selection" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{@string/subtotal(mainViewModel.subtotal)}"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal: $10.00"/>

            <TextView
                android:id="@+id/tax"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{@string/tax(mainViewModel.tax)}"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                tools:text="Tax: $0.73"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@{@string/total(mainViewModel.total)}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tax"
                tools:text="Total: $10.73"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/submit"
                android:onClick="@{() -> checkoutFragment.sendOrder()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total"/>

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/cancel"
                android:onClick="@{() -> checkoutFragment.cancelOrder()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>